# surgical_robot

./: .gitignore  .gitmodules  CMakeLists.txt  downloadData.bash  package.xml
controller/anti-windup/: ATMEGA2560.h  anti-windup.ino
controller/controller/: ATMEGA2560.h  controller.ino
controller/openloop_controller/: ATMEGA2560.h  openloop_controller.ino
launch/: delayed.launch  openloop.launch
modules/: CMakeLists.txt
modules/Receiver/: SPI.h  joystick_node.cpp
modules/closeloop/: CMakeLists.txt  closeloop_node.cpp
modules/inverseKinematics/: CMakeLists.txt  inverse_kinematics_node.cpp
modules/lse/: CMakeLists.txt  lse_input_node.cpp  lse_log_node.cpp  lse_node_input.cpp  lse_node_log.cpp
modules/lse/data/: data_1.csv
modules/openloop/: CMakeLists.txt  openloop_node.cpp  openlopp_node.cpp
modules/receiver/: CMakeLists.txt  joystick_node.cpp
modules/serial/: CMakeLists.txt  serial_node.cpp  serial_node_LSE.cpp  serial_rx_node.cpp
modules/serial/Arduino/serial_node_test/: serial_node_test.ino
modules/serial/Arduino/system_identification/: system_identification.ino
msg/: end_effector_pos.msg  joystick_reading.msg  motor_commands.msg  motor_feedback.msg  system_identification.msg
scripts/: timed_roslaunch.sh
systemIdentification/: ATMEGA2560.h  systemIdentification.ino
systemIdentification/Frequencimeter/: ATMEGA2560.h  Frequencimeter.ino
systemIdentification/Frequencimeter_2/: Frequencimeter_2.ino
systemIdentification/Priodimeter/: ATMEGA2560.h  Priodimeter.ino
